<resources>
    <string name="app_name">Let\'sQuiz</string>
    <string name="button_login">Log-In</string>
    <string name="button_signup">Sign-Up</string>
    <string name="info_createAccount">Create an account to save your quizzes that you have made.</string>
    <string name="info_signup">Don\'t have an account? Sign-up for one</string>
    <string name="lblUserAccount">User Account</string>
    <string name="button_userAccount">User Account</string>
    <string name="button_chooseTopic">Choose a Topic</string>
    <string name="button_userCreated">Choose a user-created topic</string>
    <string name="button_viewCreatedQuizzes">View Created Quizzes</string>
    <string name="button_changeUser">Change Username</string>
    <string name="button_changePassword">Change Password</string>
    <string name="button_goBack">Go Back</string>
    <string name="lblChangeUser">Change Username</string>
    <string name="lblChangePassword">Change Password</string>
    <string name="txtEnterUser">Enter Username</string>
    <string name="txtEnterPassword">Enter Password</string>


    <string name="lblChooseATopic">Choose A Topic</string>
    <string name="button_Topic1">Marvel</string>
    <string name="button_Topic2">DC</string>
    <string name="button_Topic3">Star Wars</string>
    <string name="button_Topic4">Video Games</string>

    <string name="textView_UserCreatedTopics">Choose a User-Created Topic</string>
    <string name="button_UserTopic1">Batman</string>
    <string name="button_UserTopic2">Lord of the Rings</string>
    <string name="button_UserTopic3">Harry Potter</string>
    <string name="button_UserTopic4">Back to the Future</string>

    <string name="button_Topic1Question1Answer1">Batman</string>
    <string name="button_Topic1Question1Answer2">Iron-Man</string>
    <string name="button_Topic1Question1Answer3">Superman</string>
    <string name="button_Topic1Question1Answer4">Green Arrow</string>

    <string name="button_Topic1Question2Answer1">Barry Allen</string>
    <string name="button_Topic1Question2Answer2">Tony Stark</string>
    <string name="button_Topic1Question2Answer3">Steve Rogers</string>
    <string name="button_Topic1Question2Answer4">Bruce Banner</string>

    <string name="button_Topic1Question3Answer1">The Avengers</string>
    <string name="button_Topic1Question3Answer2">Fantastic Four</string>
    <string name="button_Topic1Question3Answer3">X-Men</string>
    <string name="button_Topic1Question3Answer4">The Justice League</string>

    <string name="textView_Question1Topic1">Who is a member of the Avengers?</string>
    <string name="textView_Question2Topic1">Which of these characters is Captain America?</string>
    <string name="textView_Question3Topic1">Which team does Wolverine belong to?</string>

    <string name="textView_DCQuestion1">Which is NOT a member of the Justice League?</string>
    <string name="textView_DCQuestion2">Which of these characters is Batman?</string>
    <string name="textView_DCQuestion3">Who is Clark Kents\' alter-ego?</string>

    <string name="button_DCAnswer1">Batman</string>
    <string name="button_DCAnswer2">Wonder Woman</string>
    <string name="button_DCAnswer3">Spider-Man</string>
    <string name="button_DCAnswer4">Superman</string>

    <string name="button_Topic2Question2Answer1">Peter Parker</string>
    <string name="button_Topic2Question2Answer2">Bruce Banner</string>
    <string name="button_Topic2Question2Answer3">Clark Kent</string>
    <string name="button_Topic2Question2Answer4">Bruce Wayne</string>

    <string name="button_Topic2Question3Answer1">Captain America</string>
    <string name="button_Topic2Question3Answer2">Doctor Strange</string>
    <string name="button_Topic2Question3Answer3">Superman</string>
    <string name="button_Topic2Question3Answer4">Batman</string>

    <string name="textView_StarWarsQuestion1">What color was Luke Skywalker\s first lightsaber?</string>
    <string name="textView_StarWarsQuestion2">Who is Darth Vader?</string>
    <string name="textView_StarWarsQuestion3">Who destroyed the first Death Star?</string>

    <string name="button_StarWarsAnswer1">Pink</string>
    <string name="button_StarWarsAnswer2">Purple</string>
    <string name="button_StarWarsAnswer3">Blue</string>
    <string name="button_StarWarsAnswer4">Yellow</string>

    <string name="button_Topic3Question2Answer1">Anakin Skywalker</string>
    <string name="button_Topic3Question2Answer2">Obi-Wan Kenobi</string>
    <string name="button_Topic3Question2Answer3">Yoda</string>
    <string name="button_Topic3Question2Answer4">Spock</string>

    <string name="button_Topic3Question3Answer1">Jar Jar Binks</string>
    <string name="button_Topic3Question3Answer2">Han Solo</string>
    <string name="button_Topic3Question3Answer3">Luke Skywalker</string>
    <string name="button_Topic3Question3Answer4">Captain Rex</string>

    <string name="textView_VideoGamesQuestion1">Which of these characters are only on Playstation?</string>
    <string name="textView_VideoGamesQuestion2">NES was short for what?</string>
    <string name="textView_VideoGamesQuestion3">Who is the main character in the Halo Series?</string>

    <string name="button_VideoGamesAnswer1">Master Chief</string>
    <string name="button_VideoGamesAnswer2">Nathan Drake</string>
    <string name="button_VideoGamesAnswer3">Chell</string>
    <string name="button_VideoGamesAnswer4">Sam Fisher</string>

    <string name="button_Topic4Question2Answer1">Never Ending Simulation</string>
    <string name="button_Topic4Question2Answer2">New Enterprise System</string>
    <string name="button_Topic4Question2Answer3">Not Ever Still</string>
    <string name="button_Topic4Question2Answer4">Nintendo Entertainment System</string>

    <string name="button_Topic4Question3Answer1">Nathan Drake</string>
    <string name="button_Topic4Question3Answer2">Master Chief</string>
    <string name="button_Topic4Question3Answer3">Ratchet</string>
    <string name="button_Topic4Question3Answer4">Sam Fisher</string>


    <string name="textView_UserTopic1Question1">What is Batman\s alter-ego?</string>
    <string name="textView_UserTopic1Question2">Which of these villains are a Batman villain?</string>
    <string name="textView_UserTopic1Question3">Who is Batman\s sidekick?</string>

    <string name="button_UserTopic1Question1Answer1">Clark Kent</string>
    <string name="button_UserTopic1Question1Answer2">Bruce Wayne</string>
    <string name="button_UserTopic1Question1Answer3">Oliver Queen</string>
    <string name="button_UserTopic1Question1Answer4">Bruce Banner</string>

    <string name="button_UserTopic1Question2Answer1">Vulture</string>
    <string name="button_UserTopic1Question2Answer2">General Zod</string>
    <string name="button_UserTopic1Question2Answer3">Riddler</string>
    <string name="button_UserTopic1Question2Answer4">Loki</string>

    <string name="button_UserTopic1Question3Answer1">Robin</string>
    <string name="button_UserTopic1Question3Answer2">Beast-Boy</string>
    <string name="button_UserTopic1Question3Answer3">Cyborg</string>
    <string name="button_UserTopic1Question3Answer4">Batboy</string>

    <string name="textView_UserTopic2Question1">What is the species of Frodo Baggins?</string>
    <string name="textView_UserTopic2Question2">Who says "One does not simply walk into Mordor."?</string>
    <string name="textView_UserTopic2Question3">Where is the Shire did Bilbo live?</string>

    <string name="button_UserTopic2Question1Answer1">Dwarf</string>
    <string name="button_UserTopic2Question1Answer2">Elf</string>
    <string name="button_UserTopic2Question1Answer3">Hobbit</string>
    <string name="button_UserTopic2Question1Answer4">Orc</string>

    <string name="button_UserTopic2Question2Answer1">Aragorn</string>
    <string name="button_UserTopic2Question2Answer2">Boromir</string>
    <string name="button_UserTopic2Question2Answer3">Faramir</string>
    <string name="button_UserTopic2Question2Answer4">Elrond</string>

    <string name="button_UserTopic2Question3Answer1">Bag End</string>
    <string name="button_UserTopic2Question3Answer2">Woodhall</string>
    <string name="button_UserTopic2Question3Answer3">Bywater</string>
    <string name="button_UserTopic2Question3Answer4">Baggins Way</string>

    <string name="textView_UserTopic3Question1">What house is Harry Potter sorted in?</string>
    <string name="textView_UserTopic3Question2">What house is Draco Malfoy sorted in?</string>
    <string name="textView_UserTopic3Question3">Who is the Headmaster of Hogwarts?</string>

    <string name="button_UserTopic3Question1Answer1">Slytherin</string>
    <string name="button_UserTopic3Question1Answer2">Gryffindor</string>
    <string name="button_UserTopic3Question1Answer3">Ravenclaw</string>
    <string name="button_UserTopic3Question1Answer4">Hufflepuff</string>

    <string name="button_UserTopic3Question2Answer1">Gryffindor</string>
    <string name="button_UserTopic3Question2Answer2">Ravenclaw</string>
    <string name="button_UserTopic3Question2Answer3">Slytherin</string>
    <string name="button_UserTopic3Question2Answer4">Hufflepuff</string>

    <string name="button_UserTopic3Question3Answer1">Gandalf</string>
    <string name="button_UserTopic3Question3Answer2">Dumbledore</string>
    <string name="button_UserTopic3Question3Answer3">Elrond</string>
    <string name="button_UserTopic3Question3Answer4">Saruman</string>

    <string name="textView_UserTopic4Question1">What year did Marty travel to in Back to the Future?</string>
    <string name="textView_UserTopic4Question2">How many gigawatts is needed to power the DeLorean?</string>
    <string name="textView_UserTopic4Question3">What year did Marty travel to in Back to the Future Part 3?</string>

    <string name="button_UserTopic4Question1Answer1">2012</string>
    <string name="button_UserTopic4Question1Answer2">1999</string>
    <string name="button_UserTopic4Question1Answer3">1955</string>
    <string name="button_UserTopic4Question1Answer4">2018</string>

    <string name="button_UserTopic4Question2Answer1">1.81</string>
    <string name="button_UserTopic4Question2Answer2">1.21</string>
    <string name="button_UserTopic4Question2Answer3">1.41</string>
    <string name="button_UserTopic4Question2Answer4">1.61</string>

    <string name="button_UserTopic4Question3Answer1">1995</string>
    <string name="button_UserTopic4Question3Answer2">1885</string>
    <string name="button_UserTopic4Question3Answer3">1985</string>
    <string name="button_UserTopic4Question3Answer4">2025</string>



</resources>
