<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jtors.letsquiz.UserTopic3Question3">

    <TextView
        android:id="@+id/textView_UserTopic3Question3"
        android:layout_width="306dp"
        android:layout_height="183dp"
        android:text="@string/textView_UserTopic3Question3"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="111dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_UserTopic3Question3Answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="52dp"
        android:text="@string/button_UserTopic3Question3Answer1"
        app:layout_constraintEnd_toStartOf="@+id/button_UserTopic3Question3Answer2"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserTopic3Question3"
        android:layout_marginRight="72dp" />

    <Button
        android:id="@+id/button_UserTopic3Question3Answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/button_UserTopic3Question3Answer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_UserTopic3Question3"
        android:layout_marginRight="68dp" />

    <Button
        android:id="@+id/button_UserTopic3Question3Answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_UserTopic3Question3Answer3"
        app:layout_constraintEnd_toStartOf="@+id/button_UserTopic3Question3Answer4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_UserTopic3Question3Answer1"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/button_UserTopic3Question3Answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_UserTopic3Question3Answer4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_UserTopic3Question3Answer2"
        android:layout_marginRight="72dp" />
</android.support.constraint.ConstraintLayout>